@@ -2,6 +2,8 @@
     * Upgrade to Rails 3.2.14 - http://weblog.rubyonrails.org/2013/7/23/Rails-3-2-14-has-been-released/
 
   + Bugs:
+    * Restrict and replace space( ), dash(-) to underscore for fusion table name
+    * Auto increasement index of fusion table file name
 
 1.0.0 (2013-07-23  Kakada Chheang  <kakada@instedd.org>)
 
